# QtMIS

./: CMakeLists.txt  QtMIS_zh_CN.ts  main.cpp
src/main/cpp/: AddStudentInfoBox.cpp  AddStudentInfoBox.h  Constant.h  EditStuMessBox.cpp  EditStuMessBox.h  MainWidget.cpp  MainWidget.h  Student.cpp  Student.h  Tool.h
